# sol-nft-staking-contract-master

./: Anchor.toml  README.md  package.json
api/: package.json  wallet.json
api/src/: index.ts  scripts.ts  shred_staking.json
cli/: scripts.js  scripts.ts  types.ts
programs/Shred_Staking/: Cargo.toml
programs/Shred_Staking/src/: account.rs  constants.rs  error.rs  lib.rs
tests/: Shred_Staking.js  Shred_Staking.ts
